# pole

./: .gitignore  Cargo.toml  OPTIMIZATION.md  PoLE_Privacy_Protocol_v2.md  PoLE_Technical_Specification.md  README.md  README_CN.md  README_MAINNET.md  docs_INDEX.md  docs_MAINNET_CHECKLIST.md  docs_MAINNET_LAUNCH.md  docs_PoLE_Whitepaper.md  docs_TESTING.md  go.mod  go.sum  gvs_calculator_demo.py  node_data_collector.py  run-mainnet-mining.bat  run-mainnet.bat  run.bat  tokenomics_simulation.json  tokenomics_simulation.py
ai/: anomaly.go
cmd/core/: main.go
cmd/genesis/: main.go
cmd/node/: main.go
cmd/pole/: main.go
cmd/wallet/: main.go
common/config/: config.go
common/logger/: logger.go
config/: genesis.json  genesis_vesting_test.json
contracts/: genesis.go  governance.go  staking.go  token.go  treasury.go  vesting.go
core/: Cargo.toml
core/consensus/: Cargo.toml  block_producer.go  consensus.go  cosmos.go
core/consensus/src/: block.rs  error.rs  lib.rs  pole.rs  pos.rs  validator_set.rs
core/types/: Cargo.toml  types.go
core/types/src/: lib.rs
discovery/: service.go
event/: bus.go
execution/engine/: Cargo.toml  gvs.go  gvs_engine.go  tier_validator.go
execution/engine/src/: anomaly.rs  error.rs  lib.rs
governance/: Cargo.toml  committee.go  delegation.go  emergency.go  flow.go  governance.go  params.go
network/: Cargo.toml
network/p2p/: Cargo.toml  network.go
network/p2p/src/: behaviours.rs  error.rs  lib.rs  protocols.rs
node/: go.mod  light_node.go  main.go
openclaw-work-proof/: README.md
rpc/: grpc.go.bak  server.go
scripts/: README.md  check_node.ps1  init-genesis.ps1  run.ps1  start-mainnet.sh  start-node.ps1  test_system.ps1
token/: Cargo.toml
token/economy/: Cargo.toml  burn.go  distribution.go  dynamic_fee.go  economy.go  fee_distribution.go  simulation.go  treasury_adapter.go
token/economy/src/: burn.rs  error.rs  lib.rs  mint.rs
verify/: verifier.go
wallet/: embed.go  wallet.go
(+26 files in other folders)
