[package]
name = "pole-economy"
version = "0.1.0"
edition = "2021"

[dependencies]
pole-types = { path = "../../core/types" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
